<resources>
    <string name="app_name">Safai_Mitra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Number">233</string>
    <string name="KYCActivity">KYC Activity</string>
    <string name="Closed">Closed</string>
    <string name="Panding">Panding</string>
    <string name="Open">Open</string>
    <string name="Timeline"><![CDATA[Time Line >]]></string>
    <string name="AdvanceTableA">AdavncedTable A</string>
    <string name="Good">Good</string>
</resources>